objects/gvp__Authorization__c.object
<CustomObject>
    <description>National Account (Chain) Authorizations by Brand, Label or Item</description>
    <fields>
        <fullName>Application_Deadline__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Presented__c</fullName>
        <label>Date Presented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declined_Date__c</fullName>
        <description>Declined date of the listing</description>
        <inlineHelpText>Declined date of the listing</inlineHelpText>
        <label>Declined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delisted_Date__c</fullName>
        <description>Delisted Date</description>
        <label>Delisted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Shelf_Date__c</fullName>
        <label>Target Shelf Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Authorizations</relationshipLabel>
        <relationshipName>Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>gvp__Brand__c</referenceTo>
        <relationshipLabel>Authorizations</relationshipLabel>
        <relationshipName>Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Compliance__c</fullName>
        <label>Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized</fullName>
                    <default>true</default>
                    <label>Authorized</label>
                </value>
                <value>
                    <fullName>Mandated</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Seasonal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Custom_1__c</fullName>
        <label>Custom 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
                <value>
                    <fullName>Option 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Custom_2__c</fullName>
        <label>Custom 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
                <value>
                    <fullName>Option 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Custom_3__c</fullName>
        <label>Custom 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
                <value>
                    <fullName>Option 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Custom_Checkbox_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Checkbox 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Checkbox_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Checkbox 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Currency_1__c</fullName>
        <label>Custom Currency 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Currency_2__c</fullName>
        <label>Custom Currency 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Fact_1__c</fullName>
        <label>Custom Fact 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Fact_2__c</fullName>
        <label>Custom Fact 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Text_1__c</fullName>
        <label>Custom Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Text_2__c</fullName>
        <label>Custom Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Text_3__c</fullName>
        <label>Custom Text 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__End_Date__c</fullName>
        <defaultValue>Today ()</defaultValue>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Is_Mandated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mandated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Is_Supported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Supported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>gvp__Item__c.gvp__Label__c</field>
                <operation>equals</operation>
                <valueField>$Source.gvp__Label__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>gvp__Item__c</referenceTo>
        <relationshipLabel>Authorizations</relationshipLabel>
        <relationshipName>Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Label</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>gvp__Label__c.gvp__Brand__c</field>
                <operation>equals</operation>
                <valueField>$Source.gvp__Brand__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>gvp__Label__c</referenceTo>
        <relationshipLabel>Authorizations</relationshipLabel>
        <relationshipName>Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__New_Or_Not__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Package_Type__c</fullName>
        <label>Package Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Size</label>
        <referenceTo>gvp__Size__c</referenceTo>
        <relationshipLabel>Authorizations</relationshipLabel>
        <relationshipName>Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Presented</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Delisted</fullName>
                </value>
                <value>
                    <fullName>Status Needed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Authorization</label>
    <listViews>
        <fullName>ALCOOL_NB_LIQUOR_L1</fullName>
        <columns>NAME</columns>
        <columns>gvp__Account__c</columns>
        <columns>gvp__Start_Date__c</columns>
        <columns>gvp__End_Date__c</columns>
        <columns>Application_Deadline__c</columns>
        <columns>gvp__Brand__c</columns>
        <columns>gvp__Label__c</columns>
        <columns>gvp__Item__c</columns>
        <columns>gvp__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>gvp__Status__c</field>
            <operation>equals</operation>
            <value>Status Needed</value>
        </filters>
        <filters>
            <field>gvp__Account__c</field>
            <operation>equals</operation>
            <value>ALCOOL NB LIQUOR (L1)</value>
        </filters>
        <label>ALCOOL NB LIQUOR (L1)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>March_5th</fullName>
        <columns>NAME</columns>
        <columns>gvp__Account__c</columns>
        <columns>gvp__Start_Date__c</columns>
        <columns>gvp__End_Date__c</columns>
        <columns>Application_Deadline__c</columns>
        <columns>gvp__Brand__c</columns>
        <columns>gvp__Label__c</columns>
        <columns>gvp__Item__c</columns>
        <columns>gvp__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>March 5th</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Status_Needed</fullName>
        <columns>NAME</columns>
        <columns>gvp__Account__c</columns>
        <columns>gvp__Start_Date__c</columns>
        <columns>gvp__End_Date__c</columns>
        <columns>Application_Deadline__c</columns>
        <columns>gvp__Brand__c</columns>
        <columns>gvp__Label__c</columns>
        <columns>gvp__Item__c</columns>
        <columns>gvp__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>gvp__Status__c</field>
            <operation>equals</operation>
            <value>Status Needed</value>
        </filters>
        <label>Status Needed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Status_Not_started</fullName>
        <columns>NAME</columns>
        <columns>gvp__Account__c</columns>
        <columns>gvp__Start_Date__c</columns>
        <columns>gvp__End_Date__c</columns>
        <columns>Application_Deadline__c</columns>
        <columns>gvp__Brand__c</columns>
        <columns>gvp__Label__c</columns>
        <columns>gvp__Item__c</columns>
        <columns>gvp__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>gvp__Status__c</field>
            <operation>notEqual</operation>
            <value>Pending,Presented,Approved,Declined,Delisted,Status Needed,Not Applicable</value>
        </filters>
        <label>Status Not started</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>gvp__All</fullName>
        <columns>NAME</columns>
        <columns>gvp__Account__c</columns>
        <columns>gvp__Start_Date__c</columns>
        <columns>gvp__End_Date__c</columns>
        <columns>Application_Deadline__c</columns>
        <columns>gvp__Brand__c</columns>
        <columns>gvp__Label__c</columns>
        <columns>gvp__Item__c</columns>
        <columns>gvp__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>listings</fullName>
        <columns>NAME</columns>
        <columns>gvp__Account__c</columns>
        <columns>gvp__Start_Date__c</columns>
        <columns>gvp__End_Date__c</columns>
        <columns>Application_Deadline__c</columns>
        <columns>gvp__Brand__c</columns>
        <columns>gvp__Label__c</columns>
        <columns>gvp__Item__c</columns>
        <columns>gvp__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>gvp__Item__c</field>
            <operation>equals</operation>
            <value>MCGUINNESS BUTTERSCOTCH 12/375ML</value>
        </filters>
        <label>listings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Authorization</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>